EAGLE-330 - add call queue filtering by user id support

--- a/src/test/resources/__bcon__development__exclamation_labs__ringcentral.properties
+++ b/src/test/resources/__bcon__development__exclamation_labs__ringcentral.properties
@@ -1,6 +1,7 @@
 CONNECTOR_BASE_CONFIGURATION_ACTIVE=N
 
 ## OAuth2 Password Authentication
+CONNECTOR_RINGCENTRAL_API_URL=
 CONNECTOR_BASE_AUTH_OAUTH2_TOKEN_URL=https://platform.devtest.ringcentral.com/restapi/oauth/token
 CONNECTOR_BASE_AUTH_OAUTH2_USERNAME=
 CONNECTOR_BASE_AUTH_OAUTH2_PASSWORD=
