EAGLE-330 - 0.8 version - update Base framework to 2.0.5 to try to figure out usage limits problems

--- a/src/test/resources/__bcon__development__exclamation_labs__ringcentral.properties
+++ b/src/test/resources/__bcon__development__exclamation_labs__ringcentral.properties
@@ -1,8 +1,6 @@
-CONNECTOR_BASE_CONFIGURATION_ACTIVE=N
-
-## OAuth2 Password Authentication
-CONNECTOR_RINGCENTRAL_API_URL=
-CONNECTOR_BASE_AUTH_OAUTH2_TOKEN_URL=https://platform.devtest.ringcentral.com/restapi/oauth/token
-CONNECTOR_BASE_AUTH_OAUTH2_USERNAME=
-CONNECTOR_BASE_AUTH_OAUTH2_PASSWORD=
-CONNECTOR_BASE_AUTH_OAUTH2_ENCODED_SECRET=
+service.serviceUrl=https://platform.devtest.ringcentral.com/
+security.authenticator.oauth2Password.tokenUrl=https://platform.devtest.ringcentral.com/restapi/oauth/token
+security.authenticator.oauth2Password.oauth2Username=
+security.authenticator.oauth2Password.oauth2Password=
+security.authenticator.oauth2Password.encodedSecret=
+results.pagination=true
